--- a/DBConnection.properties
+++ b/DBConnection.properties
@@ -1,5 +1,5 @@
 #mysql DB properties
 DB_DRIVER_CLASS=com.mysql.jdbc.Driver
-DB_URL=jdbc:mysql://localhost:3306/emp?useSSL=false
+DB_URL=jdbc:mysql://104.198.137.239:3306/emp?useSSL=false
 DB_USERNAME=root
 DB_PASSWORD=admin
